[workspace]
members = [
    "crates/*",
    "apps/native/seed/crates/seed",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
log = "0.4"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
