<package format="2">
  <name>seed_ros_nodes</name>
  <version>0.0.1</version>
  <description>The seed_ros_nodes package provides service and topic handlers.</description>
  <maintainer email="zzk13180@gmail.com">zhangzhankui</maintainer>
  <license>MIT</license>

  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-waitress</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
</package>
