[package]
name = "seed_api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "1.3.42"
async-graphql = "4.0.16"
async-graphql-poem = "4.0.16"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
books = { path = "../books" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
futures = "0.3"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
