<?xml version="1.0"?>
<package format="2">
  <name>seed_core</name>
  <version>2.0.0</version>
  <description>Seed Core - ROS 机器人控制核心包（节点管理 / 地图管理 / 点位管理 / 文件操作）</description>
  <maintainer email="zzk13180@gmail.com">zhangzhankui</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 核心 ROS -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <!-- 消息生成 (build only) -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- 消息导出 -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- 运行时 -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>

  <!-- Python 依赖 -->
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-waitress</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
</package>
