# ================================================================================
# Seed Core ROS 包 - Python 项目配置文件
# ================================================================================
#
# 本文件定义了 seed_core 包的 Python 开发环境配置，包括:
#   - 代码格式化工具 (Ruff)
#   - 静态类型检查 (Pyright/Pylance)
#   - 代码质量规则
#
# 使用方法:
#   1. 安装开发依赖: pip install -r requirements-dev.txt
#   2. 格式化代码: ruff format scripts/
#   3. 检查代码: ruff check scripts/
#   4. 自动修复: ruff check scripts/ --fix
#
# ================================================================================

[project]
name = "seed-core"
version = "2.0.0"
description = "Seed Core ROS Package - 机器人导航与控制核心服务"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ros", "robotics", "navigation", "slam", "websocket"]

# ================================================================================
# Ruff 配置 - 高性能 Python Linter 和 Formatter
# 官方文档: https://docs.astral.sh/ruff/
# ================================================================================
[tool.ruff]
# 目标 Python 版本
# ROS Noetic 使用 Python 3.8
target-version = "py38"

# 单行最大字符数限制
# 100 字符是代码可读性和显示宽度的良好平衡点
line-length = 100

# 包含在检查中的文件/目录
include = ["scripts/*.py"]

# 排除在检查之外的文件/目录
exclude = [
    "__pycache__",
    "*.pyc",
    ".git",
    "build",
    "devel",
]

[tool.ruff.lint]
# ================================================================================
# 启用的规则列表
# ================================================================================
# E   : pycodestyle 错误 - PEP8 代码风格错误检查
#       例: E501 行太长, E302 期望2个空行
#
# W   : pycodestyle 警告 - PEP8 代码风格警告
#       例: W291 尾随空格, W293 空行包含空格
#
# F   : Pyflakes - 逻辑错误检测
#       例: F401 导入未使用, F841 变量未使用
#
# I   : isort - 导入语句排序和整理
#       确保 import 顺序: 标准库 -> 第三方 -> 本地
#
# UP  : pyupgrade - 自动升级旧语法
#       例: dict() -> {}, type() -> isinstance()
#
# B   : flake8-bugbear - 潜在 Bug 和不良设计模式
#       例: B006 可变默认参数, B007 未使用的循环变量
#
# C4  : flake8-comprehensions - 推导式优化
#       例: 用列表推导替代 list(map(...))
#
# SIM : flake8-simplify - 代码简化建议
#       例: 合并嵌套 if 语句, 简化布尔表达式
#
# TC  : flake8-type-checking - 类型检查导入优化
#       将仅用于类型标注的导入移到 TYPE_CHECKING 块
# ================================================================================
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TC"]

# ================================================================================
# 忽略的规则列表
# ================================================================================
# E501: 行太长
#       理由: 由 formatter 自动处理，不需要作为 lint 报错
#
# E203: 冒号前的空格
#       理由: 在切片操作 a[1 : 2] 中可能出现，与 Black/Ruff 格式化兼容
#
# B008: 函数参数默认值中调用函数
#       理由: 在 ROS 的 rospy.get_param() 等场景中常用
#
# B904: 在 except 块中应使用 raise ... from
#       理由: ROS 环境中有时需要简化异常链
# ================================================================================
ignore = ["E501", "E203", "B008", "B904"]

[tool.ruff.lint.isort]
# ================================================================================
# isort 配置 - 导入排序
# ================================================================================

# 已知的第三方库
# ROS 相关模块虽然通过 pip 安装，但在 ROS 环境中是标准配置
known-third-party = [
    "rospy",
    "roslib",
    "rospkg",
    "tf2_msgs",
    "geometry_msgs",
    "std_srvs",
    "nav_msgs",
    "sensor_msgs",
    "actionlib",
    "numpy",
    "PIL",
]

# 已知的第一方库（本项目的包）
known-first-party = ["seed_core"]

# 导入分组顺序
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# 每个导入组之间添加空行
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
# ================================================================================
# 格式化配置
# ================================================================================

# 字符串引号风格
# "double": 使用双引号 "string"
# "single": 使用单引号 'string'
# 推荐双引号，与大多数 Python 项目保持一致
quote-style = "double"

# 缩进风格
# "space": 使用空格（Python 标准推荐 4 个空格）
# "tab": 使用制表符
indent-style = "space"

# 行尾换行符
# "auto": 自动检测
# "lf": Unix 风格 (\n)
# "crlf": Windows 风格 (\r\n)
line-ending = "auto"

# 是否跳过 magic trailing comma
# false: 保留尾随逗号的多行格式
skip-magic-trailing-comma = false

# ================================================================================
# Pyright 配置 - Python 静态类型检查器 (VS Code Pylance 使用)
# 官方文档: https://microsoft.github.io/pyright/
# ================================================================================
[tool.pyright]
# 包含在类型检查中的目录
include = ["scripts"]

# 排除在类型检查之外的目录
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "build",
    "devel",
    ".git",
]

# ================================================================================
# 类型检查严格程度
# ================================================================================
# - "off": 禁用类型检查
# - "basic": 基础检查，适合逐步引入类型标注的项目
# - "standard": 标准检查，推荐用于新项目
# - "strict": 严格检查，要求完整的类型标注
#
# 选择 "basic" 是因为:
# 1. ROS 消息类型缺少完整的类型存根
# 2. 项目正在逐步添加类型标注
# 3. 平衡类型安全和开发效率
# ================================================================================
typeCheckingMode = "basic"

# 目标 Python 版本
pythonVersion = "3.8"

# 额外的模块查找路径
# 添加脚本目录，使得类型检查器能正确解析导入
extraPaths = ["scripts"]

# ================================================================================
# 特定规则配置
# ================================================================================

# 报告缺失导入为错误
# 设为 false 是因为 ROS 消息模块可能缺少类型存根
reportMissingImports = false

# 报告缺失类型存根
reportMissingTypeStubs = false

# 报告未知成员访问
# ROS 消息类型动态生成，可能没有完整的类型信息
reportAttributeAccessIssue = false

# 报告一般类型问题
reportGeneralTypeIssues = true

# 报告未使用的导入
reportUnusedImport = true

# 报告未使用的变量
reportUnusedVariable = true
