# Seed Core ROS 包 - Python 项目配置
#
# 开发工具:
#   ruff format scripts/    # 格式化
#   ruff check scripts/     # Lint
#   ruff check scripts/ --fix  # 自动修复

[project]
name = "seed-core"
version = "2.0.0"
description = "Seed Core ROS Package - 机器人导航与控制核心服务"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ros", "robotics", "navigation", "slam", "websocket"]

# --- Ruff ---
[tool.ruff]
target-version = "py38"
line-length = 100
include = ["scripts/*.py"]
exclude = ["__pycache__", "*.pyc", ".git", "build", "devel"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, C4: comprehensions, SIM: simplify, TC: type-checking
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TC"]
ignore = [
  "E501",  # 行太长 — formatter 处理
  "E203",  # 冒号前空格 — 切片兼容
  "B008",  # 函数参数默认值调用 — rospy.get_param() 常用
  "B904",  # raise ... from — ROS 环境简化异常链
]

[tool.ruff.lint.isort]
known-third-party = [
  "rospy", "roslib", "rospkg", "tf2_msgs", "geometry_msgs",
  "std_srvs", "nav_msgs", "sensor_msgs", "actionlib", "numpy", "PIL",
]
known-first-party = ["seed_core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

# --- Pyright (VS Code Pylance) ---
[tool.pyright]
include = ["scripts"]
exclude = ["**/node_modules", "**/__pycache__", "build", "devel", ".git"]
typeCheckingMode = "basic"  # ROS 消息类型缺少完整存根，basic 为合理折中
pythonVersion = "3.8"
extraPaths = ["scripts"]
reportMissingImports = false       # ROS 消息模块可能缺少类型存根
reportMissingTypeStubs = false
reportAttributeAccessIssue = false  # ROS 消息类型动态生成
reportGeneralTypeIssues = true
reportUnusedImport = true
reportUnusedVariable = true
