[package]
name = "zzk13180_seed"
version = "0.0.0"
edition = "2021"

[lib]
name = "zzk13180_seed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
common = { path = "../common", package = "zzk13180_seed_common" }
serde_json = "1.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
