[package]
name = "zzk13180_seed"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "zzk13180_seed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
common = { path = "../../../../../crates/seed-common", package = "zzk13180_seed_common" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true
tauri-plugin-os.workspace = true
log.workspace = true
thiserror.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
